Added Log functionality

--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             <form id="timeTrackingForm">
                 <div class="time-selectors">
                 <select id="hours" name="hours">
-                    <option value="Hours">Hours</option>
-                    <option value="0">0</option>
+                    <option value="Hours">Hour</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -122,9 +121,12 @@
                     <option value="8">8</option>
                     <option value="9">9</option>
                     <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    
                 </select>
                 <select id="minutes" name="minutes">
-                    <option value="Minutes">Minutes</option>
+                    <option value="Minutes">Minute</option>
                     <option value="0">0</option>
                     <option value="5">5</option>
                     <option value="10">10</option>
