Added User button

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             <h1>Lazarus Order Lifting Web App</h1>
             <form id="timeTrackingForm">
                 <div class="time-selectors">
+                    <select id="operatorName" name="operatorName">
+                        <option value="">Operator Name</option>
+                        <!-- Options will be added dynamically -->
+                    </select>
                 <select id="hours" name="hours">
                     <option value="Hours">Hour</option>
                     <option value="1">1</option>
